# treesitter-zetteltasken

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-zetteltasken.wasm
.github/workflows/: generate.yml  test.yml
bindings/c/: tree-sitter-zetteltasken.h  tree-sitter-zetteltasken.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zetteltasken/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZetteltaskenTests/: TreeSitterZetteltaskenTests.swift
src/: grammar.json  parser.c  scanner.c
test/corpus/: hello.txt
