[package]
name = "tree-sitter-zetteltasken"
description = "Zetteltasken grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zetteltasken"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-zetteltasken"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "third-party/tree-sitter-markdown/tree-sitter-markdown/src/scanner.c",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = { version = "0.22" }

[build-dependencies]
cc = "1.0.87"
